# turtlebot3-autonomous-navigation

./: README.md  replit.md  setup_instructions.txt
turtlebot3_autonomous_nav/: package.xml  setup.cfg  setup.py
turtlebot3_autonomous_nav/config/: nav2_params.yaml  navigation.rviz
turtlebot3_autonomous_nav/launch/: complete_system.launch.py  gazebo_sim.launch.py  navigation.launch.py  obstacle_avoidance_simple.launch.py
turtlebot3_autonomous_nav/turtlebot3_autonomous_nav/: obstacle_avoidance.py  sensor_subscriber.py  velocity_publisher.py
